# cpp_labs

./: .gitignore  README.md  run-tests
hw-01_bmp/: .gitignore  CMakeLists.txt  README.md
hw-01_bmp/include/: bmp_helper.h
hw-01_bmp/src/: bmp_helper.c  main.c
hw-01_bmp/tests/: 00-smoke-ok.test.args  ok-011-smoke-sq-nopad.args
hw-02_huffman/: CMakeLists.txt
hw-02_huffman/include/: argument_parser.hpp  binary_io.hpp  decoding.hpp  encoding.hpp  my_exception.hpp  node.hpp  tree.hpp
hw-02_huffman/samples/: code2.txt  code3.txt  code4.txt  code_lena.txt  from3.txt  from4.txt
hw-02_huffman/src/: argument_parser.cpp  binary_io.cpp  decoding.cpp  encoding.cpp  main.cpp  my_exception.cpp  node.cpp  tree.cpp
hw-02_huffman/test/: binary_io_tests.cpp  decoding_tests.cpp  encoding_tests.cpp  main_tests.cpp  parser_tests.cpp  tree_tests.cpp
lab-01_makefile/: .gitignore  Makefile  README.md
lab-01_makefile/include/: algorithm.h  doComputation.h  io.h  logDebug.h  max.h  util.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: .gitignore  CMakeLists.txt  README.md
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: .gitignore  CMakeLists.txt  README.md
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-03_mergesort/tests/: 00-smoke-char.test.args  00-smoke-int.test.args  00-smoke-str.expected-output  00-smoke-str.test.args
lab-04_intrusive-list/: CMakeLists.txt  README.md  cli-demo.asciinema
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-04_intrusive-list/tests/: 00-demo.expected-output  00-demo.test.input
lab-05_c-io/: CMakeLists.txt  README.md
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-05_c-io/tests/: 00-print-txt.expected-output  00-print-txt.test.args  in.txt
lab-06_int-vector/: .gitignore  CMakeLists.txt  README.md
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: main.cpp  my_vector.cpp
lab-06_int-vector/tests/: 00-get-set.expected-output  00-get-set.test.input  01-resize-reserve.expected-output  01-resize-reserve.test.input  02-insert.expected-output  02-insert.test.input  03-erase.expected-output  03-erase.test.input
lab-07_matrix/: CMakeLists.txt  README.md
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: main.cpp  matrix.cpp
lab-07_matrix/tests/: 00-init.expected-output  00-init.test.input  01-get-set.expected-output  01-get-set.test.input  02-assign-copy.expected-output  02-assign-copy.test.input  03-cmp.expected-output  03-cmp.test.input
lab-08_shared-ptr/: CMakeLists.txt  README.md
lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
lab-08_shared-ptr/src/: main.cpp  matrix.cpp  shared_ptr.cpp
lab-08_shared-ptr/tests/: 01-test-simple.test.args
lab-09_figures/: .gitignore  CMakeLists.txt  README.md
lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab-09_figures/tests/: 00_dummy.expected-output
lab-10_cppio/: CMakeLists.txt  README.md  example.edb  my.txt
lab-10_cppio/include/: bin_manip.h  employees.h
lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
lab-10_cppio/tests/: 00-smoke.expected-output  00-smoke.test.input
lab-11_vector/: CMakeLists.txt  README.md  main.cpp
lab-11_vector/include/: my_vector.h  my_vector.hpp  my_vector_impl.h  my_vector_impl.hpp
lab-11_vector/src/: main.cpp
lab-12_exceptions/: CMakeLists.txt  README.md
lab-12_exceptions/include/: matrix.h  matrix_exception.h  registers.h
lab-12_exceptions/src/: main.cpp  matrix.cpp  matrix_exception.cpp  register.cpp
lab-12_exceptions/tests/: 00-load-smoke.test.input
lab-13_array/: CMakeLists.txt
lab-13_array/include/: my_array.h
lab-13_array/src/: main.cpp
lab-14_linq/: CMakeLists.txt
lab-14_linq/include/: linq.hpp
lab-14_linq/src/: test.cpp
